# flatsweep

./: .gitignore  README.md  io.github.giantpinkrobots.flatsweep.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.giantpinkrobots.flatsweep.json/: init
.flatpak-builder/checksums/: x86_64-io.github.giantpinkrobots.flatsweep.json
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fskala_2FDev_2FGitHub_2Fflatsweep_2Fio.github.giantpinkrobots.flatsweep.json/: init
data/: io.github.giantpinkrobots.flatsweep.appdata.xml.in  io.github.giantpinkrobots.flatsweep.desktop.in  io.github.giantpinkrobots.flatsweep.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  be.po  bg.po  cs.po  de.po  el.po  es.po  fr.po  id.po  it.po  ja.po  meson.build  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  tr.po  vi.po  zh.po  zh_CN.po  zh_TW.po
src/: flatsweep.gresource.xml  flatsweep.in  lang_ar.py  lang_be.py  lang_bg.py  lang_de.py  lang_el.py  lang_en.py  lang_es.py  lang_fr.py  lang_id.py  lang_it.py  lang_jp.py  lang_pl.py  lang_pt_BR.py  lang_pt_PT.py  lang_ru.py  lang_sk.py  lang_tr.py  lang_vi.py  lang_zh.py  main.py  meson.build
