install_data('io.github.giantpinkrobots.flatsweep.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data('io.github.giantpinkrobots.flatsweep-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)

install_data('io.github.giantpinkrobots.varia.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data('io.github.giantpinkrobots.bootqt.png',
  install_dir: join_paths(get_option('datadir'), 'icons')
)

install_data('check-plain-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)

install_data('flatpak-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)
